Add change log and update coming soon html

--- a/templates/coming_soon.html
+++ b/templates/coming_soon.html
@@ -5,5 +5,7 @@
     </head>
     <body>
         <div style="font-size: 50px; text-align: center">Coming Soon!</div>
+        <p style="text-align: center">For now you can find this functionality
+            in the terminal version of the program, run with `python3 -i playground.py`</p>
     </body>
 </html>
