--- a/templates/coming_soon.html
+++ b/templates/coming_soon.html
@@ -4,8 +4,26 @@
         <title>FMM - Coming Soon!</title>
     </head>
     <body>
-        <div style="font-size: 50px; text-align: center">Coming Soon!</div>
-        <p style="text-align: center">For now you can find this functionality
-            in the terminal version of the program, run with `python3 -i playground.py`</p>
+        <div>Coming Soon!</div>
+        <p>For now you can find this functionality in the terminal version of the program, run with `python3 -i playground.py`</p>
     </body>
+
+    <style>
+        @font-face {
+            font-family: "Nunito-Light";
+            src: url("/static/resources/nunito/Nunito-Light.ttf");
+        }
+
+        body {
+            font-family: "Nunito-Light";
+        }
+        div {
+            font-size: 50px;
+            text-align: center;
+        }
+
+        p {
+            text-align: center;
+        }
+    </style>
 </html>
