--- a/templates/graphs.html
+++ b/templates/graphs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Graphs for {{ ', '.join(convo.get_people()) }}</title>
+        <title>Graphs for {{ ', '.join(convo.get_people()).title() }}</title>
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='graphs.css') }}">
     </head>
     <body>
@@ -167,7 +167,26 @@
                     </div>
                     <!-- Settings section 4 - By time of day -->
                     <div class="settings-body hide" data-settings-num="3">
-                        Delete this text and modify the css at the bottom of the css file.
+                        <div class="stacked-area">
+                            <div class="swap-clear-select">
+                                <div id="swap-graphs">Toggle Graph Types</div>
+                                <div class="clear-all">Clear All</div>
+                                <div class="select-all">Select All</div>
+                            </div>
+                            <div class="people">
+                                {% for person in convo.get_people() %}
+                                    <div class="tr">
+                                        <div class="tr-right">
+                                            <input data-color-person="{{ person }}" data-rank="{{ convo.person_rank(person) }}" type="color" placeholder="Hex Color Code">
+                                        </div>
+                                        <div class="tr-left">
+                                            <div class="rank">{{ convo.person_rank(person) }}</div>
+                                            <div class="specific-person" data-person="{{ person }}">{{ person.title() }}</div>
+                                        </div>
+                                    </div>
+                                {% endfor %}
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
