--- a/templates/graphs.html
+++ b/templates/graphs.html
@@ -187,6 +187,9 @@
                                 {% endfor %}
                             </div>
                         </div>
+
+                        <input id="window_size" type="number" min="1" max="1440">
+                        <input id="test" type="submit">
                     </div>
                 </div>
             </div>
