--- a/templates/index.html
+++ b/templates/index.html
@@ -77,7 +77,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
-                    Facebook Messsage Mining
+                    Facebook Message Mining
                 </h1>
             </div>
             <div class="col-md-4">
