--- a/templates/index.html
+++ b/templates/index.html
@@ -109,14 +109,14 @@
                     </div>
                     <div class="panel-body" id="panel-right">
                         <p>Generate elegant word clouds, in rectangles, circles or over images, freely controlling dozens of constraint such as color, word intensity, filtered words and more.</p>
-                        <a href="coming_soon" class="btn btn-default">Get Started</a>
+                        <a href="word_clouds" class="btn btn-default">Get Started</a>
                     </div>
                 </div>
             </div>
         </div>
         <!-- /.row -->
 
-        
+
 
         <!-- Features Section -->
         <!-- <div class="row">
